WPTheme/socialistalternative/main.css
/* ... */
.salt-mainheader {
  background: linear-gradient(rgba(12, 8, 36, 0.8), rgba(12, 8, 36, 0.8)),
    url("resources/headerimage.jpg");
  background-size: cover;
  background-position-y: top;
  position: relative;
  display: grid;
  grid-template-columns: 3fr 1fr;
  width: 100vw;
}
.salt-mainheader h1 {
  margin: 0px;
  padding: 7px;
}
.salt-mainheader h1 img {
  width: 100%;
  margin: 18px auto 10px 30px;
}

.navicon {
  width: 50%;
  margin: auto 40px auto auto;
  display: none;
}

.menu-btn {
  display: none;
}

.menu-icon {
  display: block;
  position: absolute;
  top: 34px;
  right: 30px;
  color: rgb(245, 248, 223);
  font-size: 2.5rem;
  cursor: pointer;
}

.menu-close-btn {
  color: rgb(245, 248, 223);
  margin: 30px 30px 0 0;
  float: right;
  font-size: 2.5rem;
  cursor: pointer;
}

.salt-mainmenu {
  z-index: 1;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.salt-mainmenu .menu-btn ~ .menu {
  background-color: rgb(12, 8, 36);
  right: calc(-370px - 18px);
  transition: right 0.5s linear;
  position: absolute;
  height: auto;
  min-height: 100vh;
  box-shadow: -11px 0px 16px 0px rgba(0, 0, 0, 0.75);
  width: 370px;
  display: block;
  color: rgb(249, 249, 228);
  font-weight: 700;
  font-size: 18px;
  z-index: 2;
}

.salt-mainmenu .menu-btn:checked ~ .menu {
  right: 0;
}

.salt-mainmenu ul {
  list-style-type: none;
  padding: 0px;
  margin: 70px 25px 10px 25px;
}
.salt-mainmenu li {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
  padding: 10px 0px;
  text-transform: uppercase;
}
.salt-mainmenu li:hover,
.salt-mainmenu .sub-menu li:hover {
  color: yellow;
}

.salt-mainmenu .sub-menu li {
  color: rgb(249, 249, 228);
}

.salt-mainmenu a {
  color: inherit;
  text-decoration: none;
  white-space: nowrap;
}

.salt-navsearch {
  display: block;
  margin: 0 25px 20px;
}

.salt-mainsearch {
  display: none;
}

.searchbar input {
  background: none;
  border: none;
  color: #fff;
  border-bottom: 2px solid #959595;
  font-size: 0.8rem;
}

.salt-mainmenu nav .sub-menu {
  z-index: 99;
  display: block;
  margin-top: 6px;
  margin-bottom: 6px;
  border-left: solid 3px rgb(249, 249, 228);
  padding-left: 10px;
  margin-left: 15px;
  text-transform: capitalize;
  font-size: 0.7rem;
}

@media (min-width: 768px) {
  .salt-mainheader {
    display: block;
  }
  .menu-icon {
    display: none;
  }
  .menu-close-btn {
    display: none;
  }

  .salt-navsearch {
    display: none;
  }

  .salt-mainsearch {
    display: block;
    position: absolute;
    top: 19px;
    right: 19px;
  }

  .salt-mainsearch {
    display: block;
  }

  .salt-mainmenu {
    position: relative;
  }

  .salt-mainmenu nav ul {
    margin: 0px 70px;
    display: flex;
    justify-content: space-between;
  }

  .salt-mainmenu .menu-btn ~ .menu {
    right: 0;
    position: relative;
    height: auto;
    min-height: 0;
    box-shadow: none;
    width: 100%;
    display: block;
  }

  .salt-mainmenu li:hover .sub-menu {
    max-height: 100vw;
  }
  .salt-mainmenu .sub-menu {
    max-height: 0px;
    transition: max-height 0.4s;
    position: absolute;
    z-index: 99;
    background-color: #0c0824;
    display: block;
    margin-left: -23px;
    overflow: hidden;
    margin-top: 6px;
    border: none;
  }
  .salt-mainmenu .sub-menu li {
    display: block;
    padding: 11px 23px;
  }

  .salt-sidebar {
    display: inline-block;
    vertical-align: top;
  }

  .salt-mainsearch {
    position: absolute;
    top: 19px;
    right: 19px;
  }
  .salt-mainsearch input {
    background: none;
    border: none;
    color: #fff;
    border-bottom: 1px solid #959595;
  }

  .salt-mainheader h1 {
    text-align: center;
    margin: 0px;
    padding: 7px;
  }
  .salt-mainheader h1 img {
    width: 30%;
    min-width: 330px;
    margin: 0;
    height: auto;
  }
  .salt-mainmenu nav {
    display: inline-block;
    position: relative;
  }
}

/* End header and navbar */

/* Footer */

.salt-mainfooter {
  background-color: rgb(12, 8, 36);
  color: rgb(249, 249, 228);
  min-height: 190px;
  display: grid;
  grid-template-columns: 1fr auto;
  padding: 20px;

}



.salt-footerhome img {
  width: 100%;
  box-sizing: border-box;
  object-fit: contain;
}
.salt-contactblock {
  margin: auto;
  width: 210px;
  padding-left: 10px;
  text-align: center;
}
.salt-contactblock a {
  display: block;
  text-decoration: none;
  color: inherit;
  font-weight: 700;
  padding-bottom: 7px;
  width: auto;
  float: right;
}
.salt-contactblock svg {
  vertical-align: middle;
  font-size: 1.3rem;
}

.salt-contactblock a span {
  display: inline-block;
  padding-top: 8px;
  vertical-align: top;
  padding-left: 5px;
  font-size: 0.6rem;
}
.salt-contactblock h2 {
  display: none;
}
.salt-contactblock a img {
  height: 30px;
  width: 30px;
  object-fit: contain;
}
.salt-socialblock {
  grid-column: 1 / span 2;
  margin: 10px 0;
}
.salt-socialblock img {
  height: 60px;
}
.salt-sociallinks {
  display: flex;
  justify-content: space-between;
  box-sizing: border-box;
  padding-top: 0px;
  font-size: 1.3rem;
  margin: 0 10px;
}

.salt-sociallinks svg {
  color: rgb(12, 8, 36);
  background-color: rgb(249, 249, 228);
  border-radius: 50%;
  width: 30px !important;
  height: 30px;
  padding: 6px;
}
.salt-international-info {
  grid-column: 1 / span 2;
  grid-row: 3 / span 1;
  display: flex;
}
.salt-international-info img {
  width: 20%;
  margin-left: 10px;
}
.salt-international-info p {
  font-size: 0.5rem;
  text-align: right;
  margin: auto;
}


@media (min-width: 450px) {
  .salt-mainfooter {
    grid-template-columns: 2fr 1fr;
    padding: 30px;
  }

  .salt-sociallinks svg{
    width: 50px !important;
    height: 50px;
  }
  .salt-international-info {
    margin-top: 20px;
  }
  .salt-international-info p {
    font-size: 0.6rem;
    text-align: right;
    flex-grow: 2;
  }

    .salt-international-info img {
      margin-left: 23px;
    }
}
/* ... */

